syntax = "proto3";
package intento.validator_admin.v1;

import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";
import "cosmos/staking/v1beta1/staking.proto";

option go_package = "github.com/intento/intento/x/validator_admin/types";

// ValidatorAddProposal defines a proposal to add a new validator
message ValidatorAddProposal {
  option (gogoproto.equal) = true;
  option (gogoproto.goproto_getters) = false;
  option (gogoproto.goproto_stringer) = false;
  
  string title = 1;
  string description = 2;
  string valoper = 3;
  bytes pub_key = 4 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/crypto/types.PubKey"];
  string moniker = 5;
}

// ValidatorRemoveProposal defines a proposal to remove an existing validator
message ValidatorRemoveProposal {
  option (gogoproto.equal) = true;
  option (gogoproto.goproto_getters) = false;
  option (gogoproto.goproto_stringer) = false;
  
  string title = 1;
  string description = 2;
  string valoper = 3;
}
